/usr/lib/ is now protected, in Mac OS make install now installs library under /usr/local/lib/.

--- a/src/lib/Makefile.osx
+++ b/src/lib/Makefile.osx
@@ -13,7 +13,7 @@ ifeq ($(debug),1)
 	PREFIX=/local
 	CPP_FLAGS += -g  -D_DEBUG 
 else
-	PREFIX=
+	PREFIX=/local
 	CPP_FLAGS += -O2 -DNDEBUG
 endif
 
