--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 # Compiler flags
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra" CACHE STRING "" FORCE)
 #set(CMAKE_C_FLAGS_RELEASE "-O1" CACHE STRING "" FORCE)
+add_compile_options(-DLIBUM_LIBRARY)
 
 # Compile Universal binary for MacOS
 set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
@@ -22,5 +23,9 @@ set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
 include_directories(${PROJECT_SOURCE_DIR}/../include)
 
 add_library(um SHARED libum.c)
+
+if (WIN32)
+    target_link_libraries(um ws2_32)
+endif()
 
 install(TARGETS um DESTINATION lib)
