--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,27 @@ project(
     LANGUAGES C CXX
     )
 
+
 # Build type definitions. Use Release by default.
 if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
+endif()
+
+if(ENABLE_COVERAGE)
+    # set compiler flags
+    set(CMAKE_C_FLAGS "-O0 -coverage")
+
+    # find required tools
+    find_program(LCOV lcov REQUIRED)
+    find_program(GENHTML genhtml REQUIRED)
+
+    # add coverage target
+    add_custom_target(coverage
+      # gather data
+      COMMAND ${LCOV} --directory . --capture --output-file coverage.info
+      # generate report
+      COMMAND ${GENHTML} --demangle-cpp -o coverage coverage.info
+      WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 endif()
 
 # Compiler flags
