Include coverage measurements part of tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,4 @@ project(
     )
 
 add_subdirectory(src) #umlib
-#add_subdirectory(examples) #Example applications
-add_subdirectory(test) #Example applications
+add_subdirectory(examples) #Example applications
