Wip code coverage (#6)
* Support for collection code coverage stats

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,25 @@ cmake_minimum_required(VERSION 3.14)
 project(libum_test_project
         LANGUAGES C CXX)
 
+# If code coverage data is collected.
+if(ENABLE_COVERAGE)
+    # set compiler flags
+    set(CMAKE_C_FLAGS "-O0 -coverage")
+
+    # find required tools
+    find_program(LCOV lcov REQUIRED)
+    find_program(GENHTML genhtml REQUIRED)
+
+    # add coverage target
+    add_custom_target(coverage
+        # gather data
+        COMMAND ${LCOV} --directory . --capture --output-file coverage.info --include "**/src/*"
+        # generate report
+        COMMAND ${GENHTML} --demangle-cpp -o coverage coverage.info
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    )
+endif()
+
 # Build type definitions. Use Release by default.
 if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
@@ -15,6 +34,9 @@ endif()
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 14)
 
+# Recompile libum also
+add_subdirectory(../src libum) #libum
+
 include(FetchContent)
 FetchContent_Declare(
     googletest
@@ -25,17 +47,17 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-# Set include folder
+# Find global header path
 find_path(UM_INC
     NAMES libum.h
     PATHS
        ${PROJECT_SOURCE_DIR}/../include  # Local build
 )
-message(STATUS "UM_INC => ${UM_INC}")
 
 # Actual tests
 enable_testing()
 
+# Create test executable
 add_executable(
     libum_test
     libum_c_test.cpp
@@ -45,17 +67,13 @@ add_executable(
 # Set include dirs
 target_include_directories(libum_test PRIVATE ${UM_INC})
 
-# Find and set the library under testing (libum)
-find_library(UM_LIB NAMES um
-    PATHS
-        ${PROJECT_SOURCE_DIR}/../build-${CMAKE_BUILD_TYPE}/src  # Local build
-        ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR} # System installed
-)
+# Link required libraries
 target_link_libraries(libum_test
     PRIVATE
         GTest::gtest_main
-        ${UM_LIB}
+        um
 )
 
+# Finally. Include test runner and test cases.
 include(GoogleTest)
 gtest_discover_tests(libum_test)
