--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 *.pro.user*
 .DS_Store
 Makefile
-*build*
+*build/
+*build-*/
 *.stash*
-*/lib/debug*
-*/lib/release*
 */custom_driving*
-Makefile.Debug
-Makefile.Release
 Release
 x64
 win32
 .vs
+.vscode
