--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.29)
 project(libum_test_project
         LANGUAGES C CXX)
 
@@ -27,15 +27,15 @@ if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
 endif()
 
 # Available since cmake 3.24
-if (POLICY CMP0135)
-    cmake_policy(SET CMP0135 NEW)
-endif()
+#if (POLICY CMP0135)
+#    cmake_policy(SET CMP0135 NEW)
+#endif()
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 14)
 
 # Recompile libum also
-add_subdirectory(../src libum) #libum
+#add_subdirectory(../src libum) #libum
 
 include(FetchContent)
 FetchContent_Declare(
@@ -51,7 +51,7 @@ FetchContent_MakeAvailable(googletest)
 find_path(UM_INC
     NAMES libum.h
     PATHS
-       ${PROJECT_SOURCE_DIR}/../include  # Local build
+       ${PROJECT_SOURCE_DIR}/../inc  # Local build
 )
 
 # Actual tests
@@ -77,3 +77,6 @@ target_link_libraries(libum_test
 # Finally. Include test runner and test cases.
 include(GoogleTest)
 gtest_discover_tests(libum_test)
+
+# Make sure that a target library has build before the test
+add_dependencies(libum_test um)
