--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(umsdk-examples)
+project(examples)
 
 add_subdirectory(cppsample)
 add_subdirectory(sample)
+
+# Create a custom target for examples
+add_custom_target(examples ALL DEPENDS cppsample sample)
