--- a/examples/cppsample/CMakeLists.txt
+++ b/examples/cppsample/CMakeLists.txt
@@ -5,10 +5,12 @@ project(
     LANGUAGES CXX
     )
 
-include_directories(${PROJECT_SOURCE_DIR}/../../include)
+include_directories(${PROJECT_SOURCE_DIR}/../../inc)
 
-link_directories(${CMAKE_INSTALL_PREFIX}/lib)
+link_directories(${CMAKE_INSTALL_PREFIX}/lib ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
 add_executable(cppsample cppsample.cpp)
 
 target_link_libraries(cppsample um)
+
+add_dependencies(cppsample um)
