--- a/examples/sample/CMakeLists.txt
+++ b/examples/sample/CMakeLists.txt
@@ -5,10 +5,12 @@ project(
     LANGUAGES C
 )
 
-include_directories(${PROJECT_SOURCE_DIR}/../../include)
+include_directories(${PROJECT_SOURCE_DIR}/../../inc)
 
-link_directories(${CMAKE_INSTALL_PREFIX}/lib)
+link_directories(${CMAKE_INSTALL_PREFIX}/lib ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
 add_executable(sample sample.c)
 
 target_link_libraries(sample um)
+
+add_dependencies(sample um)
