--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(
-    libum
-    DESCRIPTION "Sensapex um-library"
-    LANGUAGES C CXX
-    )
-
+        libum
+        DESCRIPTION "Sensapex um-library"
+        LANGUAGES C CXX
+)
 
 # Build type definitions. Use Release by default.
 if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
-endif()
+endif ()
 
 # Compiler flags
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra" CACHE STRING "" FORCE)
@@ -20,14 +19,16 @@ add_compile_options(-DLIBUM_LIBRARY)
 # Compile an Universal binary for MacOS (when not running code coverage build)
 if (NOT ENABLE_COVERAGE)
     set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
-endif()
+endif ()
 
-include_directories(${PROJECT_SOURCE_DIR}/../include)
+include_directories(${PROJECT_SOURCE_DIR}/../inc)
 
 add_library(um SHARED libum.c)
+add_library(um_static STATIC libum.c)
 
 if (WIN32)
+    # For gcc
     target_link_libraries(um ws2_32)
-endif()
+endif ()
 
-install(TARGETS um DESTINATION lib)
+install(TARGETS um um_static DESTINATION $ENV{HOME}/lib)
